# getset

./: .travis.yml  CHANGES.md  Cargo.toml  README.md  appveyor.yml
.dependabot/: config.yml
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: audit.yml  coverage.yml  lint.yml  test.yml
examples/: simple.rs
src/: generate.rs  getters.rs  impl_getset.rs  lib.rs  mut_getters.rs  setters.rs
tests/: as_mut.rs  as_ref.rs  basic.rs  clone_getters.rs  copy_getters.rs  fluent_setters.rs  generic_inline.rs  generic_where.rs  getters.rs  impl_attrs.rs  mut_getters.rs  option_getters.rs  raw_identifiers.rs  ref_setters.rs  replacers.rs  setters.rs  skip.rs  unary_tuple.rs  withers.rs
tests/fixture/: Cargo.toml
tests/fixture/src/: lib.rs
