[package]
name = "getset"
description = """
Getset, we're ready to go!

A procedural macro for generating the most basic getters and setters on fields.
"""
version = "0.0.7"
authors = ["Ana Hobden <ana@hoverbear.org>"]
license = "MIT"

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "getter", "setter", "getters", "setters"]
readme = "README.md"
repository = "https://github.com/Hoverbear/getset"

[badges]
travis-ci = { repository = "Hoverbear/getset" }

[lib]
proc-macro = true

[dependencies]
quote = "0.6.10"
syn = "0.15.21"
proc-macro2 = { version = "0.4.24", default-features = false }
