[package]
name = "getset"
description = """
Getset, we're ready to go!

A procedural macro for generating the most basic getters and setters on fields.
"""
version = "0.0.8"
authors = ["Ana Hobden <ana@hoverbear.org>"]
license = "MIT"
edition = "2018"

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "getter", "setter", "getters", "setters"]
readme = "README.md"
repository = "https://github.com/Hoverbear/getset"

[badges]
travis-ci = { repository = "Hoverbear/getset" }

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = { version = "1", default-features = false }
